force-app/main/default/objects/UserRegistration__c/UserRegistration__c.object-meta.xml
<CustomObject>
    <label>UserRegistration</label>
    <nameField>
        <label>FirstName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserRegistrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>