force-app/main/default/objects/UserRegistration__c/fields/ConfirmPassword__c.field-meta.xml
<CustomField>
    <fullName>ConfirmPassword__c</fullName>
    <label>ConfirmPassword</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>