force-app/main/default/objects/UserRegistration__c/fields/Secret_Question__c.field-meta.xml
<CustomField>
    <fullName>Secret_Question__c</fullName>
    <label>Secret Question</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>please Select Secret Question</fullName>
                <default>true</default>
                <label>please Select Secret Question</label>
            </value>
            <value>
                <fullName>What is your Pet name.</fullName>
            </value>
            <value>
                <fullName>Favorite animal.</fullName>
            </value>
            <value>
                <fullName>Best Friend Name.</fullName>
            </value>
            <value>
                <fullName>Favorite Teacher Name.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>